<resources>
    <string name="app_name">ShoppingCart</string>

    <string name="item_list">Item List</string>
    <string name="no_items_available">No items available!</string>
    <string name="add">Add</string>
    <string name="total_inc_tax">Total (inc. Tax):</string>

    <string name="cart">Cart</string>
    <string name="cart_empty">Cart is empty!</string>
    <string name="add_items">Add Items</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
</resources>