<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/cart_back_btn_size"
        android:layout_height="@dimen/cart_back_btn_size"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCart"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_gap_btw_items"
        android:text="@string/cart"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/base_gap_btw_items"
        app:layout_constraintBottom_toTopOf="@id/tvSubtotalValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCart">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="5"
                tools:listitem="@layout/item_shopping_item" />

            <TextView
                android:id="@+id/tvNoData"
                style="@style/BaseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_items_available"
                android:textSize="@dimen/text_secondary"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btnAddItems"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_gap_btw_items"
                android:text="@string/add_items"
                android:textAllCaps="false"
                android:visibility="gone"
                app:backgroundTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNoData"
                app:layout_constraintVertical_chainStyle="packed"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/onBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtotal"
        style="@style/BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toBottomOf="@id/tvSubtotalValue"
        app:layout_constraintEnd_toStartOf="@id/tvSubtotalValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvSubtotalValue" />

    <TextView
        android:id="@+id/tvSubtotalValue"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_gap_btw_items"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvTaxValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSubtotal"
        tools:text="0.00" />

    <TextView
        android:id="@+id/tvTax"
        style="@style/BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/tax"
        app:layout_constraintBottom_toBottomOf="@id/tvTaxValue"
        app:layout_constraintEnd_toStartOf="@id/tvTaxValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTaxValue" />

    <TextView
        android:id="@+id/tvTaxValue"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_gap_btw_items"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvTotalValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTax"
        tools:text="0.00" />

    <TextView
        android:id="@+id/tvTotal"
        style="@style/BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="@id/tvTotalValue"
        app:layout_constraintEnd_toStartOf="@id/tvTotalValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTotalValue" />

    <TextView
        android:id="@+id/tvTotalValue"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTotal"
        tools:text="0.00" />
</androidx.constraintlayout.widget.ConstraintLayout>