<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/tvItemList"
        style="@style/BaseTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_list"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/base_gap_btw_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvItemList">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="5"
                tools:listitem="@layout/item_shopping_item" />

            <TextView
                android:id="@+id/tvNoData"
                style="@style/BaseTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/no_items_available"
                android:textSize="@dimen/text_secondary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/onBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cart_btn_margin"
        android:contentDescription="@string/cart"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_cart"
        app:tint="@color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTotal"
        android:layout_width="0dp"
        android:layout_height="@dimen/shopping_summary_height"
        android:layout_marginEnd="@dimen/base_gap_btw_items"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="@dimen/shopping_summary_radius"
        app:contentPadding="@dimen/base_gap_btw_items"
        app:layout_constraintBottom_toBottomOf="@id/btnCart"
        app:layout_constraintEnd_toStartOf="@id/btnCart"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalIncTax"
                style="@style/BaseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_inc_tax"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvTotalIncTaxValue"
                style="@style/BaseTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_gap_btw_text"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="0.00" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>